Fix button formatting to remove cutoff shadow

--- a/frontend/src/styles/AddMemberForm.scss
+++ b/frontend/src/styles/AddMemberForm.scss
@@ -18,6 +18,7 @@
 
     .update-new-members {
       display: flex;
+      padding: 0.5em;
     }
 
 
